k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: task-manager
  labels:
    app.kubernetes.io/name: task-manager-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: task-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-api
                port:
                  number: 8080
